<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.lojaonline.activity.CriarContaActivity">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome_conta"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf_conta"
                android:inputType="number" />

            <EditText
                android:id="@+id/edEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_endereco_conta"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spnEstado"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/estados"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/edMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_municipio_conta"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefone_conta"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email_login"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha_login"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirmar_senha"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_style__dark_custom"
                android:onClick="onClickCadastrar"
                android:text="@string/text_criar_conta"
                android:textColor="@color/colorButtonText" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
