<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    cardCornerRadius="2dp"
    elevation="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:foreground="?attr/selectableItemBackground">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/text_codigo_pedido"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txCodigoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_value_codigo_pedido" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/text_data_pedido"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txDtPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_value_data_pedido" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/text_cliente_pedido"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txClientePedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_value_cliente_pedido" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/text_cpf_pedido"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txCPFPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_value_cpf_pedido" />

        </TableRow>


    </TableLayout>

</android.support.v7.widget.CardView>